添加预览图片

--- a/project.config.json
+++ b/project.config.json
@@ -14,7 +14,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.6",
-	"appid": "wxae7f7ccb9cb869df",
+	"appid": "",
 	"projectname": "qzweatherWX",
 	"debugOptions": {
 		"hidedInDevtools": []
